# IRC-STEP

./: .gitignore  README.md
Algorithm/: DYNAMICS_BRIDGE_ACTION_MAP_2026-07-22.md  VISION_INTERFACE_DRAFT_2026-07-20.md  ball_fields_2026-07-20.txt  ball_output_scan_2026-07-20.txt  hurdle_fields_2026-07-20.txt  hurdle_output_scan_2026-07-20.txt  line_analyze_function_2026-07-20.txt  line_fields_2026-07-20.txt  line_output_scan_2026-07-20.txt  line_payload_scan_2026-07-20.txt  line_publish_fields_2026-07-20.txt  main.cpp  main_2026-07-20_before.cpp  motion_decision_2026-07-20_before.py  navigation_action_candidates_2026-07-22.txt  navigation_action_scan_2026-07-22.txt  navigation_actions_2026-07-22.txt  vision_fields_combined_2026-07-20.txt  vision_input_adapter.py  vision_topic_scan_2026-07-20.txt
Docs/: dynamics_offline_debug_candidates.md  real_robot_motor_verification_plan.md  real_robot_safety_checklist.md  single_motor_usage.md
Dynamics/: BRP_Kinematics.hpp  NewPattern2.hpp  NewPattern2_copy.cpp  STEP_Dynamcis.cpp  STEP_Dynamics.cpp  analyze_branchtrack_sweep.py  plot_debug.py  roll_rate005_final_analysis.csv  roll_replay_candidate_rate005_final.csv  single_motor_test.cpp
Dynamics/original_control/: callback.cpp
Dynamics/safety_control/: CMakeLists.txt  COMMAND_EVALUATION_SUMMARY.md  GAZEBO_REPLAY_FINDINGS.md  REAL_ROBOT_COMMAND_PRECHECK.md  callback.cpp  callback.hpp  dynamixel.cpp  dynamixel.hpp  dynamixel_controller.cpp  dynamixel_controller.hpp  main.cpp  package.xml
Dynamics/safety_control/msg/: BallResult.msg  FallResult.msg  HoopResult.msg  HurdleResult.msg  LinePointsArray.msg  LineResult.msg  MotionCommand.msg  MotionEnd.msg
Dynamics/safety_control/scripts/: convert_safety_log_to_gazebo_replay.py  verify_dry_run.py
Simulation/Gazebo/: README_foot_orientation_logging.md  README_lateral_slide_replay.md  README_single_ankle_roll_tracking.md
Simulation/Gazebo/config/: joint_mapping.json
Simulation/Gazebo/models/step_urdf/: joint_names.txt  step_fixed.csv  step_fixed.sdf  step_fixed.urdf  step_fixed_base.sdf  step_fixed_base_ctrl.sdf  step_fixed_base_ctrl_damping.sdf  step_fixed_base_ctrl_hip_stiff.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_test.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_x_test.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_z_test.sdf  step_fixed_base_ctrl_joint_state_ankle_roll_damping_test.sdf  step_fixed_base_ctrl_joint_state_ankle_roll_stiff.sdf  step_fixed_base_ctrl_joint_state_ankle_strong.sdf  step_fixed_base_ctrl_joint_state_foot_box.sdf  step_fixed_base_ctrl_joint_state_foot_sole_box.sdf  step_fixed_base_ctrl_joint_state_high_friction.sdf  step_fixed_base_ctrl_joint_state_no_foot_collision.sdf  step_fixed_base_ctrl_joint_state_roll_x_pitch_y_test.sdf  step_fixed_base_ctrl_joint_state_roll_x_pitch_z_test.sdf  step_free_base_ctrl_joint_state.sdf  step_lateral_slide_ctrl.sdf  step_lateral_slide_ctrl_damping.sdf  step_lateral_slide_ctrl_hip_stiff.sdf  step_lateral_slide_ctrl_joint_state.sdf  step_lateral_slide_ctrl_joint_state_ankle_roll_damping_test.sdf  step_lateral_slide_ctrl_joint_state_ankle_roll_stiff.sdf
Simulation/Gazebo/models/step_urdf/meshes/: L_Arm_hand.STL  L_Arm_lower.STL  L_Arm_shoulder.STL  L_Arm_upper.STL  L_Leg_ankle.STL  L_Leg_calf.STL  L_Leg_foot.STL  L_Leg_hip.STL  L_Leg_hip_double.STL  L_Leg_thighs.STL  Neck.STL  R_Arm_hand.STL  R_Arm_lower.STL  R_Arm_shoulder.STL  R_Arm_upper.STL  R_Leg_ankle.STL  R_Leg_calf.STL  R_Leg_foot.STL  R_Leg_hip.STL  R_Leg_hip_double.STL  R_Leg_thighs.STL  Upper_Body.STL  base_link.STL  head.STL
Simulation/Gazebo/scripts/: hold_leg_pose_from_csv.py  inspect_dynamics_joint_csv.py  log_base_lateral_state.py  log_leg_actual_joint_positions.py  publish_leg_constant_pose.py  replay_roll_joints_from_csv.py  test_ankle_roll_sign_orientation.py  test_single_ankle_roll_tracking.py  test_single_joint_cmd_pos.py
Simulation/Gazebo/worlds/: step_fixed_base_ctrl_damping_test.world.sdf  step_fixed_base_ctrl_hip_stiff_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_x_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_axis_z_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_roll_damping_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_roll_stiff_test.world.sdf  step_fixed_base_ctrl_joint_state_ankle_strong_test.world.sdf  step_fixed_base_ctrl_joint_state_foot_box_test.world.sdf  step_fixed_base_ctrl_joint_state_foot_sole_box_test.world.sdf  step_fixed_base_ctrl_joint_state_high_friction_test.world.sdf  step_fixed_base_ctrl_joint_state_no_foot_collision_test.world.sdf  step_fixed_base_ctrl_joint_state_roll_x_pitch_y_test.world.sdf  step_fixed_base_ctrl_joint_state_roll_x_pitch_z_test.world.sdf  step_fixed_base_ctrl_joint_state_test.world.sdf  step_fixed_base_ctrl_test.world.sdf  step_fixed_base_test.world.sdf  step_free_base_ctrl_joint_state_test.world.sdf  step_free_base_no_gravity_high_spawn_test.world.sdf  step_free_base_no_gravity_test.world.sdf  step_lateral_slide_ctrl_damping_test.world.sdf  step_lateral_slide_ctrl_hip_stiff_test.world.sdf  step_lateral_slide_ctrl_joint_state_ankle_roll_damping_test.world.sdf  step_lateral_slide_ctrl_joint_state_ankle_roll_stiff_test.world.sdf  step_lateral_slide_ctrl_joint_state_test.world.sdf  step_lateral_slide_ctrl_test.world.sdf
